@@ -69,6 +69,7 @@ This file lists the incompatible changes between Version 2.x and older versions
   - QXQ_div_ratlift was renamed to QXQ_div
   - Z_to_F2x(x,v): v is now a shifted variable number
   - bnrconductor_i is now obsolete, use bnrconductor_raw or bnrconductormod
+  - bnrsurjection now returns [Matrix, cyc(F), cyc(f)] inste of Matrix
 
 * Specific to the pthread interface
 ===================================
