@@ -1973,9 +1973,11 @@ modulus is the conductor).
 
 \fun{GEN}{bnrsurjection}{GEN BNR, GEN bnr} \kbd{BNR} and \kbd{bnr}
 defined over the same field $K$, for moduli $F$ and $f$ with
-$F\mid f$, returns the matrix of the canonical surjection
-$\text{Cl}_K(F)\to \text{Cl}_K(f)$ (giving the image of the fixed ray class
-group generators of \kbd{BNR} in terms of the ones in \kbd{bnr}).
+$F\mid f$, returns the canonical surjection
+$\text{Cl}_K(F)\to \text{Cl}_K(f)$ as a triple $[M,\var{cyc}_F,\var{cyc}_f]$.
+$M$ gives the image of the fixed ray class group generators of \kbd{BNR} in
+terms of the ones in \kbd{bnr}, $\var{cyc}_F$ and $\var{cyc}_f$ are the cyclic
+structures of \kbd{BNR} and \kbd{bnr} respectively (as per \tet{\bnr_get_cyc}).
 
 \fun{GEN}{ABC_to_bnr}{GEN A, GEN B, GEN C, GEN *H, int addgen} This is a
 quick conversion function designed to go from the too general (inefficient)
